--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dat.sem3</groupId>
-    <artifactId>devops-starter</artifactId>
+    <artifactId>person</artifactId>
     <version>1.0.1</version>
     <packaging>war</packaging>
 
-    <name>jpa-rest-devops-starter_2</name>
+    <name>REST_Persons_DTO_p2</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.19</version>
+            <version>8.0.17</version>
         </dependency>
       
         <dependency>
@@ -131,7 +131,7 @@
              <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>3.1</version>
+                <version>2.2</version>
                 <configuration>          
                     <server>TomcatServer</server>
                     <url>${remote.server}</url>
